--- a/Ficha7/.vscode/settings.json
+++ b/Ficha7/.vscode/settings.json
@@ -1,21 +1,17 @@
 {
     "files.associations": {
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "type_traits": "cpp",
-        "limits": "cpp",
-        "*.tcc": "cpp",
-        "cinttypes": "cpp",
-        "cstdint": "cpp",
-        "typeinfo": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
+        "*.tcc": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
         "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
@@ -34,16 +30,19 @@
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
+        "type_traits": "cpp",
         "utility": "cpp",
         "fstream": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
-        "iostream": "cpp",
         "istream": "cpp",
+        "limits": "cpp",
         "new": "cpp",
         "ostream": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "cinttypes": "cpp",
+        "typeinfo": "cpp"
     }
 }
